--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,9 +9,17 @@ Authors@R:
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: Finds nth element of a recursive sequence defined by a formula,
               which is then plotted by a linegraph.
-License: `use_mit_license()`, `use_gpl3_license()` or friends to
-    pick a license
+License: MIT + file LICENSE
 Encoding: UTF-8
 LazyData: true
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.1
+Suggests: 
+    spelling,
+    testthat (>= 3.0.0)
+Language: en-US
+Imports: 
+    tibble,
+    magrittr,
+    ggplot2
+Config/testthat/edition: 3
